--- a/src/components/bloks/VlpNextSteps/VlpNextSteps.module.css
+++ b/src/components/bloks/VlpNextSteps/VlpNextSteps.module.css
@@ -1,6 +1,6 @@
 .section {
   background: var(--wds-color-nissan-white);
-  padding: 80px 120px;
+  padding: 64px 120px;
 }
 
 .inner {
